fixed title not rendering on iphone

--- a/src/base.css
+++ b/src/base.css
@@ -52,16 +52,20 @@
         --very-large: 2.5rem;
         --header: 1.625rem;
         --normal: 1.125rem;
+        --small: 1rem;
     }
 }
 
 body, html {
     margin: 0;
     padding: 0;
+    height: 100vh;
+    width: 100vw;
+    scroll-behavior: smooth;
 }
 
-html {
-    scroll-behavior: smooth;
+body::before, html::before {
+    background: var(--background);
 }
 
 .center {
